--- a/geometria/tarea4/tarea4solucion.ipynb
+++ b/geometria/tarea4/tarea4solucion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,15 +35,333 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1."
+    "# 1. One way to define a system of coordinates for the sphere $S^2$ given by $x^2+y^2+z^2=1$ is by using the stereographic projection. \n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\pi : S^2 \\setminus \\{N\\} &\\to \\mathbb{R}^2 \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "which carries a point $p = (x, y, z)$ of the sphere $S^2$ minus the north pole $\\{N\\} = (0, 0, 1)$ onto the intersection of the $xy$ plane with the straight line which connects $N$ to $p$.\n",
+    "\n",
+    "Let $(X, Y) = \\pi(x, y, z)$ where $(x, y, z) \\in S^2 \\setminus \\{N\\}$ and $(X, Y) \\in xy$ plane.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------\n",
+    "\n",
+    "- Show that $\\pi: S^2 \\setminus \\{N\\} \\to \\mathbb{R}^2$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\n",
+    "X &= \\frac{x}{1-z}, & Y &= \\frac{y}{1-z}\n",
+    "\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "***Proof:***\n",
+    "\n",
+    "Any point $(X, Y) \\in \\mathbb{R}^2$ can be written as $(X, Y) = \\pi(x, y, z)$ for some $(x, y, z) \\in S^2 \\setminus \\{N\\}$.\n",
+    "\n",
+    "Lets call $\\phi$ the plane at which the points $(X, Y)$ lie:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\phi = \\{ (x, y, 0), x,y \\in \\mathbb{R}^{2} \\}\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "And now think of the definition of the parametrization for the line that connects $N$ to $p$:\n",
+    "\n",
+    "<center>\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Stereoprojzero.svg/1024px-Stereoprojzero.svg.png\" alt=\"Drawing\" style=\"width: 400px;\"/>\n",
+    "</center>\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\gamma(t) &= (1-t)N + tp, & t \\in \\mathbb{R} \\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Where $p = (x, y, z)$ and $N = (0, 0, 1)$, this clearly looks like a linear interpolation between $N$ and $p$, and it is, but in order to see it more clearly, lets write it in a different way:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\gamma(t) &= (1-t)N + tp, & t \\in \\mathbb{R} \\\\\n",
+    "&= (1-t)(0, 0, 1) + t(x, y, z) \\\\\n",
+    "&= (0, 0, 1-t) + (tx, ty, tz) \\\\\n",
+    "&= (tx, ty, 1-t+tz) \\\\\n",
+    "&= (tx, ty, 1 + t(z-1))\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Then, the intersection of the plane $\\phi$ with the line $\\gamma(t)$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\phi \\cap \\gamma(t) &= \\{ (tx, ty, 1 + t(z-1)), x,y \\in \\mathbb{R}^{2} \\} \\\\\n",
+    "&= \\{ (tx, ty, 1 + t(z-1)), x,y \\in \\mathbb{R}^{2} \\} \\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Where $1 + t(z-1) = 0$ this is, $t = \\frac{1}{1-z}$, then another way to write the intersection is:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\phi \\cap \\gamma(t) &= \\left\\{ (x\\frac{1}{1-z}, y\\frac{1}{1-z}, 0), x,y \\in \\mathbb{R}^{2} \\right\\} \\\\\n",
+    "&= \\left\\{ (\\frac{x}{1-z}, \\frac{y}{1-z}, 0), x,y \\in \\mathbb{R}^{2} \\right\\} \\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "Which is the same as saying:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "X &= \\frac{x}{1-z}, & Y &= \\frac{y}{1-z}\n",
+    "\\end{align*}\n",
+    "\\tag*{$\\blacksquare$}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------\n",
+    "\n",
+    "- Show that the inverse map $\\mathbb{R}^2 \\to S^2 \\setminus \\{N\\}$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\n",
+    "\\vec{X}(X, Y) = (x, y, z) &= \\left(\\frac{2X}{1+X^2+Y^2}, \\frac{2Y}{1+X^2+Y^2}, \\frac{-1+X^2+Y^2}{1+X^2+Y^2}\\right)\n",
+    "\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "***Proof:***\n",
+    "\n",
+    "With our previous findings in mind, we can obtain:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\n",
+    "X &= \\frac{x}{1-z} \\\\\n",
+    "Y &= \\frac{y}{1-z}\\\\\\\\\n",
+    "X^2 + Y^2 &= \\frac{x^2}{(1-z)^2} + \\frac{y^2}{(1-z)^2} \\\\\n",
+    "X^2 + Y^2 &= \\frac{x^2 + y^2}{(1-z)^2} \\\\\n",
+    "\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "And now, we can use the fact that $x^2 + y^2 + z^2 = 1$, and do some magic:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "z^2 - 1&=  x^2 + y^2 \\\\\n",
+    "(z+1)(z-1)&=  x^2 + y^2 \\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "That we can replace in our previous equation:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "X^2 + Y^2 &= \\frac{x^2 + y^2}{(1-z)^2} \\\\\n",
+    "X^2 + Y^2 &= \\frac{(z+1)(z-1)}{(1-z)^2} \\\\\n",
+    "X^2 + Y^2 &= \\frac{z+1}{1-z} \\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "And solving for $z$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "X^2 + Y^2 &= \\frac{z+1}{1-z} \\\\\n",
+    "\\frac{X^2 + Y^2 - 1}{X^2 + Y^2 + 1} &= z \\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Now with $z$ we can obtain $x$ and $y$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\n",
+    "X &= \\frac{x}{1-z} \\\\\n",
+    "X(1-z) &= x \\\\\\\\\n",
+    "\n",
+    "Y &= \\frac{y}{1-z}\\\\\n",
+    "Y(1-z) &= y \\\\\n",
+    "\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "And, we've comed to a place where we would prefer to do 100 pushups _(is more healthy and better use of time)_ than to keep on writing on these expressions to arrive to the final result, so we'll use sympy to do the rest of the work:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{X^{2} + Y^{2} - 1}{X^{2} + Y^{2} + 1}$"
+      ],
+      "text/plain": [
+       "(X**2 + Y**2 - 1)/(X**2 + Y**2 + 1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X, Y, Z = sp.symbols('X Y Z')\n",
+    "\n",
+    "z = (X**2 + Y**2 - 1)/(X**2 + Y**2 + 1)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{2 X}{X^{2} + Y^{2} + 1}$"
+      ],
+      "text/plain": [
+       "2*X/(X**2 + Y**2 + 1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = X*(1 - z)\n",
+    "x.simplify()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{2 Y}{X^{2} + Y^{2} + 1}$"
+      ],
+      "text/plain": [
+       "2*Y/(X**2 + Y**2 + 1)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = Y*(1 - z)\n",
+    "y.simplify()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus, we've arrived to the desired result $\\blacksquare$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------------\n",
+    "- Proof that $S^2 \\setminus \\{N\\}$ is a regular surface using the previous map $\\vec{X}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First let's take our map $\\vec{X}$ and check the expression for $z$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "z &= \\frac{-1+X^2+Y^2}{1+X^2+Y^2} \\\\\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "consider this as a function $z(X, Y)$, and let's check the partial derivatives:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{4 X}{\\left(X^{2} + Y^{2} + 1\\right)^{2}}$"
+      ],
+      "text/plain": [
+       "4*X/(X**2 + Y**2 + 1)**2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.diff(X).simplify()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{4 Y}{\\left(X^{2} + Y^{2} + 1\\right)^{2}}$"
+      ],
+      "text/plain": [
+       "4*Y/(X**2 + Y**2 + 1)**2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.diff(Y).simplify()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This ensures that $z$ is a differentiable function. And by using the **proposition 1** _(sec. 2, p. 60, Diferential geometry of curves and surfaces)_ of Do Carmo, we can conclude that $S^2 \\setminus \\{N\\}$ is a regular surface."
+   ]
   },
   {
    "cell_type": "markdown",
